<resources>

    <string name="app_name">Alzhpre</string>
    <string name="register">Registro</string>
    <string name="username">Usuario</string>
    <string name="editusername">Editar Usuario</string>
    <string name="email">Correo Electrónico</string>
    <string name="editemail">Editar Correo Electrónico</string>
    <string name="textpassword">Contraseña</string>
    <string name="password">Contraseña</string>
    <string name="confirm_the_password">Confirmar Contraseña</string>
    <string name="editconfirm_the_password">Editar Confirmar Contraseña</string>
    <string name="btnregister">Registrar</string>
    <string name="login">Iniciar Sesión</string>
    <string name="alzhpre">Alzhpre</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="tutorial">Tutorial</string>
    <string name="familyEmail">Correo Electrónico del Familiar</string>
    <string name="preguntas">Preguntas</string>
    <string name="nameandsurname">Nombre y Apellidos</string>
    <string name="birthday">Fecha de Nacimiento</string>
    <string name="birthplace">Lugar de Nacimiento</string>
    <string name="residencePlace">Lugar de Residencia</string>
    <string name="parentsName">Nombres de los Padres</string>
    <string name="brothersName">Nombres de los Hermanos/as</string>
    <string name="coupleName">Nombre de tu Pareja (si tienes)</string>
    <string name="childrenName">Nombres de tus Hijos/as (si tienes)</string>
    <string name="pets">¿Tienes Mascotas?</string>
    <string name="petsName">Nombres de tus Mascotas (separa con "," si tienes más de una)</string>
    <string name="professio">¿A qué te Dedicas?</string>
    <string name="colorPreferit">¿Cuál es tu Color Favorito?</string>
    <string name="menjarPreferit">¿Cuál es tu Comida Favorita?</string>
    <string name="peliculaPreferida">¿Cuál es tu Película Favorita?</string>
    <string name="musicaPreferida">¿Cuál es tu Música Favorita?</string>
    <string name="aficioPreferida">¿Cuál es tu Afición Favorita?</string>
    <string name="inicio">Inicio</string>
    <string name="mediado">Intermedio</string>
    <string name="avanzado">Avanzado</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_graph">Estadísticas</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_logout">Desconectar</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Encabezado de navegación</string>
    <string name="user">Nombre de Usuario</string>
    <string name="pantalla_para_familiares">Pantalla para Familiares</string>
    <string name="guardar">Guardar</string>
    <string name="nom_de_usuari">Nombre de Usuario</string>
    <string name="content">TODO</string>
    <string name="nivell_1">Nivel 1</string>
    <string name="nivell_2">Nivel 2</string>
    <string name="nivell_3">Nivel 3</string>
    <string name="prevenci">Prevención</string>
    <string name="preguntes_personals">Preguntas Personales</string>
    <string name="memoritzacio">Memorización</string>
    <string name="calculs">Cálculos</string>
    <string name="memOria_2">Memoria 2</string>
    <string name="pensament_abstracte">Pensamiento Abstracto</string>
    <string name="denominacio_imatges">Denominación Imágenes</string>
    <string name="instruccions_mobils">Instrucciones Móviles</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="action_settings">Configuración</string>
    <string name="respuesta">Respuesta</string>
    <string name="resultado_de_los_calculos">Resultado de los Cálculos</string>
    <string name="comprovar">Comprobar</string>
    <string name="uid_del_familiar">Uid del Familiar</string>
    <string name="pantalla_para_pacientes">Pantalla para Pacientes</string>
    <string name="quin_es_el_grau_del_pacient">¿Cuál es el Grado del Paciente?</string>
    <string name="nivell_acutual">Nivel Actual</string>
    <string name="uid">Uid</string>
    <string name="save">Guardar</string>
    <string name="correctes">Correctas</string>
    <string name="asociar_imatges">Asociar Imágenes</string>
    <string name="incorrectes">Incorrectas</string>
    <string name="opcion_3">Opción 3</string>
    <string name="opcion_2">Opción 2</string>
    <string name="opcion_1">Opción 1</string>
    <string name="precio_entrada">Elige el precio de la entrada y calcula su precio a partir de un valor aleatorio que aparece en Cantidad</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="opcion_4">Opción 4</string>
    <string name="opcion_5">Opción 5</string>
    <string name="opcion_6">Opción 6</string>
    <string name="opcion_7">Opción 7</string>
    <string name="opcion_8">Opción 8</string>
    <string name="opcion_9">Opción 9</string>
    <string name="siguiente">Siguiente</string>
    <string name="usuari_del_familiar">Usuario del Familiar</string>
    <string name="resultat_1">Resultado 1</string>
    <string name="resultat_2">Resultado 2</string>
    <string name="resultat_3">Resultado 3</string>
    <string name="x">X</string>
    <string name="escoge_la_actividad">Elige la Actividad</string>
    <string name="error">Error %</string>
    <string name="email_del_familiar">Correo Electrónico del Familiar</string>


    <string name="catala_app_name">Alzhpre</string>
    <string name="catala_register">Registre</string>
    <string name="catala_username">Usuari</string>
    <string name="catala_editusername">Editar Usuari</string>
    <string name="catala_email">Correu Electrònic</string>
    <string name="catala_editemail">Editar Correu Electrònic</string>
    <string name="catala_textpassword">Contrasenya</string>
    <string name="catala_password">Contrasenya</string>
    <string name="catala_confirm_the_password">Confirmar Contrasenya</string>
    <string name="catala_editconfirm_the_password">Editar Confirmar Contrasenya</string>
    <string name="catala_btnregister">Registrar</string>
    <string name="catala_login">Inici de Sessió</string>
    <string name="catala_alzhpre">Alzhpre</string>
    <string name="catala_correo_electronico">Correu Electrònic</string>
    <string name="catala_tutorial">Tutorial</string>
    <string name="catala_familyEmail">Correu Electrònic del Familiar</string>
    <string name="catala_preguntas">Preguntes</string>
    <string name="catala_nameandsurname">Nom i Cognoms</string>
    <string name="catala_birthday">Data de Naixement</string>
    <string name="catala_birthplace">Lloc de Naixement</string>
    <string name="catala_residencePlace">Lloc de Residència</string>
    <string name="catala_parentsName">Noms dels Pares</string>
    <string name="catala_brothersName">Noms dels Germans/es</string>
    <string name="catala_coupleName">Nom de la Teva Parella (si tens)</string>
    <string name="catala_childrenName">Noms dels Teus Fills/es (si tens)</string>
    <string name="catala_pets">Tens Mascotes?</string>
    <string name="catala_petsName">Noms de les Teves Mascotes (separa amb "," si tens més de una)</string>
    <string name="catala_professio">A Què et Dediques/aves</string>
    <string name="catala_colorPreferit">Quin és el Teu Color Preferit?</string>
    <string name="catala_menjarPreferit">Quin és el Teu Menjar Preferit?</string>
    <string name="catala_peliculaPreferida">Quina és la Teva Pel·lícula Preferida?</string>
    <string name="catala_musicaPreferida">Quina és la Teva Música Preferida?</string>
    <string name="catala_aficioPreferida">Quina és la Teva Afició Preferida?</string>
    <string name="catala_inicio">Inici</string>
    <string name="catala_mediado">Intermedi</string>
    <string name="catala_avanzado">Avançat</string>

    <string name="catala_menu_perfil">Perfil</string>
    <string name="catala_menu_graph">Estadístiques</string>
    <string name="catala_menu_home">Inici</string>
    <string name="catala_menu_logout">Desconnectar</string>

    <string name="catala_nav_header_title">Android Studio</string>
    <string name="catala_nav_header_subtitle">android.studio@android.com</string>
    <string name="catala_nav_header_desc">Capçalera de navegació</string>
    <string name="catala_user">Nom de Usuari</string>
    <string name="catala_pantalla_para_familiares">Pantalla per a Familiars</string>
    <string name="catala_guardar">Guardar</string>
    <string name="catala_nom_de_usuari">Nom de Usuari</string>
    <string name="catala_content">TODO</string>
    <string name="catala_nivell_1">Nivell 1</string>
    <string name="catala_nivell_2">Nivell 2</string>
    <string name="catala_nivell_3">Nivell 3</string>
    <string name="catala_prevenci">Prevenció</string>
    <string name="catala_preguntes_personals">Preguntes Personals</string>
    <string name="catala_memoritzacio">Memorització</string>
    <string name="catala_calculs">Càlculs</string>
    <string name="catala_memOria_2">Memòria 2</string>
    <string name="catala_pensament_abstracte">Pensament Abstracte</string>
    <string name="catala_denominacio_imatges">Denominació Imatges</string>
    <string name="catala_instruccions_mobils">Instruccions Mòbils</string>
    <string name="catala_open">Obrir</string>
    <string name="catala_close">Tancar</string>
    <string name="catala_action_settings">Configuració</string>
    <string name="catala_respuesta">Resposta</string>
    <string name="catala_resultado_de_los_calculos">Resultat dels Càlculs</string>
    <string name="catala_comprovar">Comprovar</string>
    <string name="catala_uid_del_familiar">Uid del Familiar</string>
    <string name="catala_pantalla_para_pacientes">Pantalla per a Pacients</string>
    <string name="catala_quin_es_el_grau_del_pacient">Quin és el Grau del Pacient?</string>
    <string name="catala_nivell_acutual">Nivell Actual</string>
    <string name="catala_uid">Uid</string>
    <string name="catala_save">Guardar</string>
    <string name="catala_correctes">Correctes</string>
    <string name="catala_asociar_imatges">Associar Imatges</string>
    <string name="catala_incorrectes">Incorrectes</string>
    <string name="catala_opcion_3">Opció 3</string>
    <string name="catala_opcion_2">Opció 2</string>
    <string name="catala_opcion_1">Opció 1</string>
    <string name="catala_precio_entrada">Tria el preu de la entrada i calcula el seu preu a partir de un valor aleatori que surt a Quantitat</string>
    <string name="catala_precio">Preu</string>
    <string name="catala_cantidad">Quantitat</string>
    <string name="catala_opcion_4">Opció 4</string>
    <string name="catala_opcion_5">Opció 5</string>
    <string name="catala_opcion_6">Opció 6</string>
    <string name="catala_opcion_7">Opció 7</string>
    <string name="catala_opcion_8">Opció 8</string>
    <string name="catala_opcion_9">Opció 9</string>
    <string name="catala_siguiente">Següent</string>
    <string name="catala_usuari_del_familiar">Usuari del Familiar</string>
    <string name="catala_resultat_1">Resultat 1</string>
    <string name="catala_resultat_2">Resultat 2</string>
    <string name="catala_resultat_3">Resultat 3</string>
    <string name="catala_x">X</string>
    <string name="catala_escoge_la_actividad">Tria la activitat</string>
    <string name="catala_error">Error %</string>
    <string name="catala_email_del_familiar">Correu Electrònic del Familiar</string>
    <string name="dades">Dades</string>


</resources>