<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="catala_navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/catala_menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/perfil"
            android:title="@string/catala_menu_perfil" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/graph"
            android:title="@string/catala_menu_graph" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/catala_menu_logout" />


    </group>
</menu>
