<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.alzhpre.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.alzhpre.ui.about.AboutFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_graph"
        android:name="com.example.alzhpre.ui.graph.GraphFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_graph" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.alzhpre.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>