<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/catala_mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.alzhpre.catala_ui.home.CatalaHomeFragment"
        android:label="@string/catala_menu_home"
        tools:layout="@layout/catala_fragment_home" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.alzhpre.catala_ui.about.CatalaAboutFragment"
        android:label="@string/catala_menu_perfil"
        tools:layout="@layout/catala_fragment_about" />
    <fragment
        android:id="@+id/nav_graph"
        android:name="com.example.alzhpre.catala_ui.graph.CatalaGraphFragment"
        android:label="@string/catala_menu_perfil"
        tools:layout="@layout/catala_fragment_graph" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.alzhpre.catala_ui.logout.CatalaLogoutFragment"
        android:label="@string/catala_menu_logout"
        tools:layout="@layout/catala_fragment_logout" />
</navigation>